--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="selected-link" content="repo_source" data-turbo-transient>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>webstudio</title>
 
 
@@ -37,6 +38,11 @@
         <li><a href="" class="page-link">Contacts</a></li>
       </ul>
     </nav>
+    <button class="mobile-open-btn" type="button">
+      <svg class="mobile-open-btn-icon" width="24" height="24">
+        <use href="./images/icons-2.svg#icon-burger"></use>
+      </svg>
+    </button>
     <address class="address-block">
       <ul class="address-block-list">
         <li>
@@ -53,17 +59,19 @@
   <main>
 
 <!-- Hero section 1-->
-
+ <!-- 
 <section class="section-hero">
   <div class="container">
     <h1 class="main-heading"> Effective Solutions for Your Business</h1>
     <button class="main-button" type="button">Order Service</button>
     </div>
-  </section>
+ </section>
 
   <!--Section-Benefits 2-->
 
-    <section class="section-benefits">
+     
+  <!--  
+  <section class="section-benefits">   
       <div class="container">
       <h2 class="visually-hidden">Benefits</h2>
 
@@ -118,8 +126,9 @@
       </div>
     </section>
 
+  
 <!--Section Team 3-->
-
+<!--  
     <section class="section-team">
       <div class="container">
       <h2 class="section-team-heading">Our Team</h2>
@@ -287,8 +296,8 @@
     </section>
 
     <!-- Section Our Portfolio 4-->
-
-  <section class="section-portfolio">
+    <!-- 
+<section class="section-portfolio">
     <div class="container">
     <h2 class="section-portfolio-heading">Our Portfolio</h2>
     <ul class="portfolio-list">
@@ -375,10 +384,11 @@
   </section>
 
   
-  </main>
-
+</main>
+  
 <!-- Footer -->
-<footer class="footer-block">
+<!--  
+<footer class="footer-block"> 
   
   <div class="footer-container footer-container-second" >
 <div class="footer-container-logo">
@@ -437,18 +447,18 @@
     />
   </label>
   
-  <button class="footer-button-subscribe" type="submit">Subscribe
+  <button class="footer-button-subscribe" type="submit">Subscribe 
 <svg class="subscribe-icone" width="24" height="24">
   <use href="./images/icons-2.svg#icon-Frame"></use>
 </svg>
-  </button>
+   </button>
 </form>     
 </div>
 </div>
 </footer>
-
+ 
 <!--========Modal Window========= -->
-
+  <!--  
 <div class="backdrop is-open">
 
 <div class="modal-window">
@@ -542,5 +552,10 @@ Send
 </div>
 
 </div>
+<!--  -->
+<!-- Mobile menu -->
+
+
+  
 </body>
 </html>
