--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 <body>
 
-    <!-- Header  -->
+
 
   <header class="header-main">
-    <div class="container">
+<div class="container main-header-conteiner">
       <nav class="main-navigation">
       <a class="header-logo" href="./index.html">
         Web<span class="logo-text">Studio</span>
@@ -53,19 +53,12 @@
         </li>
       </ul>
       </address>
-    </div>
+ </div>
       </header>
 
-  <main>
+<main>
 
-<!-- Hero section 1-->
- <!-- 
-<section class="section-hero">
-  <div class="container">
-    <h1 class="main-heading"> Effective Solutions for Your Business</h1>
-    <button class="main-button" type="button">Order Service</button>
-    </div>
- </section>
+
 
   <!--Section-Benefits 2-->
 
@@ -127,8 +120,9 @@
     </section>
 
   
-<!--Section Team 3-->
-<!--  
+    \
+
+
     <section class="section-team">
       <div class="container">
       <h2 class="section-team-heading">Our Team</h2>
@@ -295,8 +289,13 @@
       </div>
     </section>
 
-    <!-- Section Our Portfolio 4-->
-    <!-- 
+    
+
+
+
+
+
+
 <section class="section-portfolio">
     <div class="container">
     <h2 class="section-portfolio-heading">Our Portfolio</h2>
@@ -386,8 +385,11 @@
   
 </main>
   
-<!-- Footer -->
-<!--  
+
+
+
+
+
 <footer class="footer-block"> 
   
   <div class="footer-container footer-container-second" >
@@ -457,8 +459,7 @@
 </div>
 </footer>
  
-<!--========Modal Window========= -->
-  <!--  
+
 <div class="backdrop is-open">
 
 <div class="modal-window">
@@ -552,10 +553,32 @@ Send
 </div>
 
 </div>
-<!--  -->
+   -->
+
 <!-- Mobile menu -->
 
+<div class="mobile-menu">
+<div class="container mobile-menu-container"> 
+ <button class="mobile-menu-close-btn" type="button"> 
+<svg class="mobile-menu-close-btn-icone" width="24" height="24">
+  <use href="./images/icons-2.svg#icon-close-black"></use>
+</svg>
+ </button>
 
+
+<nav class="main-navigation">
+  
+  <ul class="nav-list">
+    <li><a href="./index.html" class="page-link special-line">Studio</a></li>
+    <li><a href="" class="page-link">Portfolio</a></li>
+    <li><a href="" class="page-link">Contacts</a></li>
+  </ul>
+</nav>
+
+
+  
+
+</div>
   
 </body>
 </html>
