--- a/index.html
+++ b/index.html
@@ -566,9 +566,9 @@ Send
  </button>
 
 
-<nav class="main-navigation">
+<nav class="main-navigation-mobile">
   
-  <ul class="nav-list">
+  <ul class="nav-list-mobile">
     <li><a href="./index.html" class="page-link special-line">Studio</a></li>
     <li><a href="" class="page-link">Portfolio</a></li>
     <li><a href="" class="page-link">Contacts</a></li>
