--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a class="header-logo" href="./index.html">
         Web<span class="logo-text">Studio</span>
       </a>
-      <ul class="nav-list">
+      <ul class="nav-list-mobile">
         <li><a href="./index.html" class="page-link special-line">Studio</a></li>
         <li><a href="" class="page-link">Portfolio</a></li>
         <li><a href="" class="page-link">Contacts</a></li>
@@ -569,13 +569,54 @@ Send
 <nav class="main-navigation-mobile">
   
   <ul class="nav-list-mobile">
-    <li><a href="./index.html" class="page-link special-line">Studio</a></li>
+    <li><a href="./index.html" class="page-link">Studio</a></li>
     <li><a href="" class="page-link">Portfolio</a></li>
     <li><a href="" class="page-link">Contacts</a></li>
   </ul>
 </nav>
 
+<address class="address-block-mobile">
+  <ul class="address-block-list">
+    <li>
+      <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    </li>
+    <li>
+      <a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+    </li>
+  </ul>
+</address>
 
+
+<ul class="icon-team-list">
+  <li class="icon-team-item">
+    <a class="icon-team-item-link" href="">
+      <svg class="icon-team-item-link-swg" width="24" height="24">
+        <use href="./images/icons.svg#icon-instagram"></use>
+      </svg>
+    </a>
+  </li>
+  <li class="icon-team-item">
+    <a class="icon-team-item-link" href="">
+      <svg class="icon-team-item-link-swg" width="24" height="24">
+        <use href="./images/icons.svg#icon-twitter"></use>
+      </svg>
+    </a>
+  </li>
+  <li class="icon-team-item">
+    <a class="icon-team-item-link" href="">
+      <svg class="icon-team-item-link-swg" width="24" height="24">
+        <use href="./images/icons.svg#icon-facebook"></use>
+      </svg>
+    </a>
+  </li>
+  <li class="icon-team-item">
+    <a class="icon-team-item-link" href="">
+      <svg class="icon-team-item-link-swg" width="24" height="24">
+        <use href="./images/icons.svg#icon-linkedin"></use>
+      </svg>
+    </a>
+  </li>
+</ul>
   
 
 </div>
