--- a/index.html
+++ b/index.html
@@ -557,9 +557,9 @@ Send
 
 <!-- Mobile menu -->
 
-<div class="mobile-menu">
-<div class="container mobile-menu-container "> 
- <button class="mobile-menu-close-btn" type="button" > 
+<div class="mobile-menu is-open">
+<div class="container mobile-menu-container"> 
+ <button class="mobile-menu-close-btn" type="button"> 
 <svg class="mobile-menu-close-btn-icone" width="8" height="8">
   <use href="./images/icons-2.svg#icon-close-black"></use>
 </svg>
